argo/oew72229/nginx-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-api
  template:
    metadata:
      labels:
        app: nginx-api
    spec:
      containers:
      - name: nginx-api
        image: gitlab.diamond.ac.uk:5050/sysadmin/container-tools/kube-ingress-example:dev
        resources:
          limits:
            cpu: "1"
            memory: 300M
        ports:
          - name: http
            containerPort: 80
