argo/oew72229/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: oew72229.diamond.ac.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-svc
            port:
              number: 80
